--- a/TODO
+++ b/TODO
@@ -3,4 +3,5 @@ login required for all app
 invitation system, can create users with valid invite code
 follow all users and get followed by all users on login
 upload mp3s, get track info
+randomize file name
 play mp3s with flash widget
