uploads and crappy audio player

--- a/README
+++ b/README
@@ -47,7 +47,21 @@ heroku open
 
 == Stats
 
-# TODO
++----------------------+-------+-------+---------+---------+-----+-------+
+| Name                 | Lines |   LOC | Classes | Methods | M/C | LOC/M |
++----------------------+-------+-------+---------+---------+-----+-------+
+| Controllers          |    61 |    44 |       4 |       9 |   2 |     2 |
+| Helpers              |     2 |     2 |       0 |       0 |   0 |     0 |
+| Models               |   183 |   137 |       4 |      18 |   4 |     5 |
+| Libraries            |     0 |     0 |       0 |       0 |   0 |     0 |
+| Integration tests    |     0 |     0 |       0 |       0 |   0 |     0 |
+| Functional tests     |    69 |    47 |       3 |       0 |   0 |     0 |
+| Unit tests           |   301 |   257 |       4 |       0 |   0 |     0 |
++----------------------+-------+-------+---------+---------+-----+-------+
+| Total                |   616 |   487 |      15 |      27 |   1 |    16 |
++----------------------+-------+-------+---------+---------+-----+-------+
+  Code LOC: 183     Test LOC: 304     Code to Test Ratio: 1:1.7
+
 
 == MIT License
 
