--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -6,3 +6,16 @@ en:
       unauthenticated: ''
       unconfirmed: 'You have to confirm your account before continuing.'
       invalid: 'Invalid login or password.'
+      timeout: 'Your session expired, please sign in again to continue.'
+      inactive: 'Your account was not activated yet.'
+    passwords:
+      send_instructions: 'You will receive an email with instructions about how to reset your password in a few minutes.'
+      updated: 'Your password was changed successfully. You are now signed in.'
+    confirmations:
+      send_instructions: 'You will receive an email with instructions about how to confirm your account in a few minutes.'
+      confirmed: 'Your account was successfully confirmed. You are now signed in.'
+    mailer:
+      confirmation_instructions: 'Confirmation instructions'
+      reset_password_instructions: 'Reset password instructions'
+
+
