--- a/README
+++ b/README
@@ -1,7 +1,6 @@
 == About
 
 KZAK is a web-based jukebox.
-
 http://almosteffortless.com/kzak/
 
 
@@ -10,12 +9,13 @@ http://almosteffortless.com/kzak/
 # Requires Ruby >= 1.8.7
 git clone git://github.com/trevorturk/kzak.git
 cd kzak
-sudo gem install bundler
+sudo gem install bundler --version='0.8.0' # until heroku supports 0.9.x
 gem bundle
 cp config/database.example.yml config/database.yml
 cp config/config.example.yml config/config.yml
 rake db:create
 rake db:schema:load
+rake db:seed
 script/server
 # http://localhost:3000/
 
