--- a/README
+++ b/README
@@ -9,8 +9,8 @@ http://almosteffortless.com/kzak/
 # Requires Ruby >= 1.8.7
 git clone git://github.com/trevorturk/kzak.git
 cd kzak
-sudo gem install bundler --version='0.8.0' # until heroku supports 0.9.x
-gem bundle
+sudo gem install bundler
+bundle install vendor/bundler_gems
 cp config/database.example.yml config/database.yml
 cp config/config.example.yml config/config.yml
 rake db:create
@@ -38,7 +38,7 @@ heroku open
 
 heroku db:pull sqlite://db/backup.sqlite3
 git pull
-gem bundle
+bundle install vendor/bundler_gems
 # Review possible config changes in config/config.example.yml
 rake heroku:config
 git push heroku master
@@ -47,6 +47,9 @@ heroku open
 
 
 == Changes
+
+HEAD
+- bundler 0.9x support
 
 0.1
 - Initial public release
