--- a/README
+++ b/README
@@ -10,7 +10,7 @@ http://almosteffortless.com/kzak/
 git clone git://github.com/trevorturk/kzak.git
 cd kzak
 sudo gem install bundler
-bundle install vendor/bundler_gems
+bundle install vendor/bundler_gems --without production
 cp config/database.example.yml config/database.yml
 cp config/config.example.yml config/config.yml
 rake db:create
