--- a/README
+++ b/README
@@ -14,7 +14,7 @@ http://almosteffortless.com/kzak/
 git clone git://github.com/trevorturk/kzak.git
 cd kzak
 sudo gem install bundler
-bundle install vendor/bundler_gems --without production
+bundle install # adjust Gemfile if necessary
 cp config/database.example.yml config/database.yml
 cp config/config.example.yml config/config.yml
 rake db:create
@@ -42,7 +42,7 @@ heroku open
 
 heroku db:pull sqlite://db/backup.sqlite3
 git pull
-bundle install vendor/bundler_gems --without production
+bundle install # adjust Gemfile if necessary
 # Review possible config changes in config/config.example.yml
 rake heroku:config
 git push heroku master
